--- a/genindex.html
+++ b/genindex.html
@@ -7,13 +7,13 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Index &mdash; testmania v0.3.2 documentation</title>
+    <title>Index &mdash; testmania v0.4.0 documentation</title>
     <link rel="stylesheet" href="_static/default.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '',
-        VERSION:     '0.3.2',
+        VERSION:     '0.4.0',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -22,7 +22,7 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="testmania v0.3.2 documentation" href="index.html" /> 
+    <link rel="top" title="testmania v0.4.0 documentation" href="index.html" /> 
   </head>
   <body>
     <div class="related">
@@ -34,7 +34,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="index.html">testmania v0.3.2 documentation</a> &raquo;</li> 
+        <li><a href="index.html">testmania v0.4.0 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -47,20 +47,38 @@
    <h1 id="index">Index</h1>
 
    <div class="genindex-jumpbox">
-   <a href="#A"><strong>A</strong></a> | <a href="#T"><strong>T</strong></a> 
+   <a href="#_"><strong>_</strong></a> | <a href="#A"><strong>A</strong></a> | <a href="#E"><strong>E</strong></a> | <a href="#T"><strong>T</strong></a> 
    </div>
+<h2 id="_">_</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%" valign="top"><dl>
+    <dt><a href="expect.html#testmania.expect.Expectation.__init__">__init__() (testmania.expect.Expectation method)</a></dt>
+</dl></td>
+</tr></table>
+
 <h2 id="A">A</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%" valign="top"><dl>
     <dt><a href="assertions.html#testmania.deep.assert_deep_equal">assert_deep_equal() (in module testmania.deep)</a></dt>
+    <dt><a href="assertions.html#testmania.time.assert_just_now">assert_just_now() (in module testmania.time)</a></dt>
 </dl></td>
   <td style="width: 33%" valign="top"><dl>
     <dt><a href="assertions.html#testmania.xml.assert_xml_equal">assert_xml_equal() (in module testmania.xml)</a></dt>
 </dl></td>
 </tr></table>
 
+<h2 id="E">E</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%" valign="top"><dl>
+    <dt><a href="expect.html#testmania.expect.Expectation">Expectation (class in testmania.expect)</a></dt>
+</dl></td>
+</tr></table>
+
 <h2 id="T">T</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%" valign="top"><dl>
+    <dt><a href="expect.html#module-testmania.expect">testmania.expect (module)</a></dt>
+</dl></td>
   <td style="width: 33%" valign="top"><dl>
     <dt><a href="pep8.html#module-testmania.pep8">testmania.pep8 (module)</a></dt>
 </dl></td>
@@ -102,7 +120,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="index.html">testmania v0.3.2 documentation</a> &raquo;</li> 
+        <li><a href="index.html">testmania v0.4.0 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
